tests/spec/compile-fail/188_missing_return_path.zn
// category: compile-fail
// stage: mvp
// milestone: M2
// purpose: explicit value-returning functions cannot obviously fall through

module tests.fail.missingReturnPath;

fn missingReturn() -> U32 {
    val value: U32 = 1;
} // expected-error[E0302]: function missingReturn must return U32 on all paths

fn conditionalOnly(flag: Bool) -> U32 {
    if flag {
        return 1;
    }
} // expected-error[E0302]: function conditionalOnly must return U32 on all paths
